Change rendering engine to use ejs instead of swig

--- a/views/header.html
+++ b/views/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>{% block title %}Oasis{% endblock %}</title>
+		<title>Oasis</title>
 		<style>
       html {
         font-family: system-ui, 
@@ -78,15 +78,7 @@
         text-decoration: none;
         font-weight: bold;
       }
-
-
 		</style>
 	</head>
 	<body>
 		<section id="content">
-			{% block content %}
-			<p>Missing content!</p>
-			{% endblock %}
-		</section>
-	</body>
-</html>
