--- a/views/home.html
+++ b/views/home.html
@@ -1,42 +1,49 @@
-{% extends 'layout.html' %}
+<%- include('header.html'); %>
 
-{% block content %}
-{% for msg in msgs %}
+<% msgs.forEach(function (msg) { %>
   <section class="message">
     <header>
-      <img class="avatar" src="{{ msg.value.meta.author.avatar.url }}">
+      <img class="avatar" src="<%= msg.value.meta.author.avatar.url %>">
 
       <span class="text">
         <span class="author">
-          {{ msg.value.meta.author.name}}
+          <%= msg.value.meta.author.name%>
         </span>
 
         <span class="timestamp">
-          ({{ msg.value.meta.timestamp.received.since }})
+          (<%= msg.value.meta.timestamp.received.since %>)
         </span>
 
-      {% if msg.value.content.root == null %}
+        <% if (msg.value.meta.private === true) { %>
+        🔒
+        <% } else { %>
+        🌐
+        <% } %>
+
+        <% if (msg.value.content.root == null) { %>
         🌱
-      {% endif %}
+        <% } else { %>
+        ↩️
+        <% } %>
+
       </span>
     </header>
 
     <section class="content">
-    {{ msg.value.meta.md.block() }}
+      <%- msg.value.meta.md.block() %>
     </section>
 
     <footer>
-      <a href="ssb:{{ msg.key }}">link</a>
-      {% if msg.value.content.root %}
-      <a href="ssb:{{ msg.value.content.root }}">root</a>
-      {% endif %}
+      <a href="ssb:<%= msg.key %>">link</a>
+      <% if (msg.value.content.root != null) { %>
+      <a href="ssb:<%= msg.value.content.root %>">root</a>
+      <% } %>
 
-      {% if msg.value.content.fork %}
-      <a href="ssb:{{ msg.value.content.fork }}">fork</a>
-      {% endif %}
+      <% if (msg.value.content.fork != null) { %>
+      <a href="ssb:<%= msg.value.content.fork %>">fork</a>
+      <% } %>
     </footer>
-
   </section>
-{% endfor %}
+<% }) %>
 
-{% endblock %}
+<%- include('footer.html'); %>
