Refactor to use smaller template partials

--- a/views/header.html
+++ b/views/header.html
@@ -72,6 +72,10 @@
         margin-left: 0.5rem;
         font-weight: bold;
       }
+      .message > header > .text > .author > a {
+        color: black;
+          text-decoration: none;
+      }
       .message > footer > a {
         color: #888;
         margin-right: 0.5rem;
@@ -81,4 +85,5 @@
 		</style>
 	</head>
 	<body>
+    <a href="/">home</a>
 		<section id="content">
