--- a/views/single-message.html
+++ b/views/single-message.html
@@ -1,5 +1,5 @@
 <%- include('header.html'); %>
 
-<%- include('feed.html', { msgs }); %>
+<%- include('message.html', { msg }); %>
 
 <%- include('footer.html'); %>
