Refactor to reduce code duplication

--- a/views/header.html
+++ b/views/header.html
@@ -36,6 +36,10 @@
         overflow-x: scroll;
       }
 
+      .message img {
+        max-width: 100%;
+      }
+
       .message code {
         color: hsl(330, 75%, 50%)
       }
@@ -54,7 +58,7 @@
       .message {
         background: #fff;
         padding: 1.5rem;
-        margin: 2rem 0;
+        margin: 0.75rem 0;
         border-radius: 2px;
         border: 1px solid #ddd;
          
