Add name and description to author view

--- a/views/header.html
+++ b/views/header.html
@@ -27,10 +27,9 @@
       h5 { font-size: 113%; }
       h6 { font-size: 111%; }
 
-      h1 {
-		  	margin-bottom: 0.5em;
-		  	border-bottom: 1px solid #0000001a;
-		  }
+      h1, h2, h3, h4, h5, h6 {
+        margin: 0.5em 0;
+      }
 
       .message pre {
         overflow-x: scroll;
