Refactor to use smaller and better-organized components

--- a/views/home.html
+++ b/views/home.html
@@ -1,5 +1,5 @@
-<%- include('header.html'); %>
+<%- include('partials/header.html'); %>
 
 <%- include('feed.html', { msgs }); %>
 
-<%- include('footer.html'); %>
+<%- include('partials/footer.html'); %>
