--- a/views/thread.html
+++ b/views/thread.html
@@ -1,9 +1,5 @@
 <%- include('partials/header.html'); %>
 
-<h1><%= name %></h1>
-
-<%- description %>
-
-<%- include('feed.html', { msgs }); %>
+<%- include('message.html', { msg }); %>
 
 <%- include('partials/footer.html'); %>
