--- a/views/message.html
+++ b/views/message.html
@@ -1,6 +1,8 @@
 <section class="message">
   <header>
-    <img class="avatar" src="<%= msg.value.meta.author.avatar.url %>">
+    <a href="/author/<%= encodeURIComponent(msg.value.author) %>">
+      <img class="avatar" src="<%= msg.value.meta.author.avatar.url %>">
+    </a>
 
     <span class="text">
       <span class="author">
@@ -25,13 +27,13 @@
   </section>
 
   <footer>
-    <a href="/message/<%= encodeURIComponent(msg.key) %>">link</a>
+    <a href="/thread/<%= encodeURIComponent(msg.key) %>">link</a>
     <% if (msg.value.content.root != null) { %>
-    <a href="/message/<%= encodeURIComponent(msg.value.content.root) %>">root</a>
+    <a href="/thread/<%= encodeURIComponent(msg.value.content.root) %>">root</a>
     <% } %>
 
     <% if (msg.value.content.fork != null) { %>
-    <a href="/message/<%= encodeURIComponent(msg.value.content.fork) %>">fork</a>
+    <a href="/thread/<%= encodeURIComponent(msg.value.content.fork) %>">fork</a>
     <% } %>
   </footer>
 </section>
