--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -5,5 +5,8 @@
     <link rel="stylesheet" href="/style.css">
   </head>
   <body>
-    <a href="/">home</a>
+    <nav>
+      <a href="/">home</a>
+      <a href="/profile">profile</a>
+    </nav>
     <section id="content">
