--- a/public/style.css
+++ b/public/style.css
@@ -33,6 +33,16 @@ h1, h2, h3, h4, h5, h6 {
   max-width: 100%;
 }
 
+.message > :first-child {
+  margin-top: 0;
+  padding-top: 0;
+}
+
+.message > :last-child {
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+
 .message code {
   color: hsl(330, 75%, 50%)
 }
@@ -51,7 +61,7 @@ h1, h2, h3, h4, h5, h6 {
 .message {
   background: #fff;
   padding: 1.5rem;
-  margin: 0.75rem 0;
+  margin: 1rem 0;
   border-radius: 2px;
   border: 1px solid #ddd;
 
@@ -75,7 +85,36 @@ h1, h2, h3, h4, h5, h6 {
 }
 .message > footer > a {
   color: #888;
-  margin-right: 0.5rem;
+  margin-right: 1rem;
   text-decoration: none;
   font-weight: bold;
+}
+
+nav a {
+  color: #888;
+  margin-right: 1rem;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.profile {
+  margin-top: 1rem;
+  display: flex;
+  margin-bottom: 1rem;
+}
+
+.profile > img, .profile > h1 {
+  display: inline-block;
+}
+
+.profile > img {
+  width: 4rem;
+  height: 4rem;
+  margin-right: 1rem;
+  border-radius: 2px;
+}
+
+
+ul {
+  padding-left: 1rem;
 }
