--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>Oasis</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/static/public/style.css">
+    <link rel="stylesheet" href="/static/hljs/github.css">
   </head>
   <body>
     <nav>
