Add raw JSON view

--- a/views/message.html
+++ b/views/message.html
@@ -38,5 +38,6 @@
       <% } %>
     <% } %>
 
+    <a href="/raw/<%= encodeURIComponent(msg.value.content.root) %>">raw</a>
   </footer>
 </section>
