--- a/public/style.css
+++ b/public/style.css
@@ -25,7 +25,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0.5em 0;
 }
 
-.message pre {
+pre {
   overflow-x: auto;
 }
 
@@ -117,7 +117,6 @@ nav a {
   margin-right: 1rem;
   border-radius: 2px;
 }
-
 
 ul {
   padding-left: 1rem;
