Add links to source and new issue page
I don't feel great about linking to GitHub but that's because I don't
feel great about *using* GitHub for source hosting and bug tracking. On
the other hand, I think it's useful to link to both since the people who
will be trying this are likely going to be developers right now. In the
future I'll probably revert this change.

--- a/public/style.css
+++ b/public/style.css
@@ -58,7 +58,7 @@ pre {
   }
   body {
     max-width: 40rem;
-    padding: 1.5rem;
+    margin: 1.5rem;
   }
 }
 
@@ -94,17 +94,26 @@ pre {
   font-weight: bold;
 }
 
+nav {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1.5rem;
+}
+
+nav * {
+  margin-right: 1rem;
+}
+
 nav a {
   color: #888;
-  margin-right: 1rem;
   text-decoration: none;
   font-weight: bold;
 }
 
 .profile {
-  margin-top: 1rem;
+  margin-top: 1.5rem;
   display: flex;
-  margin-bottom: 1rem;
+  margin-bottom: 1.5rem;
 }
 
 .profile > img, .profile > h1 {
