--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -9,5 +9,7 @@
     <nav>
       <a href="/">home</a>
       <a href="/profile">profile</a>
+      <a href="https://github.com/fraction/oasis">source</a>
+      <a href="https://github.com/fraction/oasis/issues/new">help</a>
     </nav>
     <section id="content">
