Fix raw view showing the wrong message

--- a/views/message.html
+++ b/views/message.html
@@ -38,6 +38,6 @@
       <% } %>
     <% } %>
 
-    <a href="/raw/<%= encodeURIComponent(msg.value.content.root) %>">raw</a>
+    <a href="/raw/<%= encodeURIComponent(msg.key) %>">raw</a>
   </footer>
 </section>
