Change link color and appease the type-check gods

--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Oasis</title>
+    <title>&#x1F3DD;&#xFE0F; Oasis</title>
     <link rel="stylesheet" href="/static/public/style.css">
     <link rel="stylesheet" href="/static/hljs/github.css">
   </head>
