--- a/views/message.html
+++ b/views/message.html
@@ -1,4 +1,4 @@
-<section class="message">
+<section id="<%=msg.key%>"class="message">
   <header>
     <a href="/author/<%= encodeURIComponent(msg.value.author) %>">
       <img class="avatar" src="<%= msg.value.meta.author.avatar.url %>">
@@ -27,8 +27,22 @@
   </section>
 
   <footer>
-    <a href="/thread/<%= encodeURIComponent(msg.key) %>">context</a>
+    <% if (msg.value.meta.voted === false) { %>
+      <form action="/like/<%= encodeURIComponent(msg.key) %>" method="post">
+        <button name="button" type="submit" value="1">
+          ❤&nbsp;<%= msg.value.meta.votes.length %>
+        </button>
+      </form>
+      <% } else { %>
+      <form action="/like/<%= encodeURIComponent(msg.key) %>" method="post">
+        <button class="liked" name="button" type="submit" value="0">
+          ❤&nbsp;<%= msg.value.meta.votes.length %>
+        </button>
+      </form>
+      <% } %>
+    <a href="/thread/<%= encodeURIComponent(msg.key) %>#<%= encodeURIComponent(msg.key) %>">context</a>
 
     <a href="/raw/<%= encodeURIComponent(msg.key) %>">raw</a>
   </footer>
+
 </section>
