--- a/public/style.css
+++ b/public/style.css
@@ -112,6 +112,14 @@ pre {
   padding: 0;
 }
 
+.message blockquote {
+  margin-left: 0;
+  border-left: 0.5rem solid #eee;
+  padding-left: 1.5rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
 nav {
   display: flex;
   justify-content: space-between;
