Refactor dependency graph to create layers
I was playing around with Madge and noticed that the previous dependency
graph looked almost *exactly* like a bowl of spaghetti I had last week.
After a few hours on Wikipedia I got interested in refactoring the code
so that each `require()` imported a module from one level deeper into
the tree.

I don't know if this is actually useful, but it's better than spaghetti.

In the future I think I should probably refactor the database
convenience functions out of the "models" since they really aren't
models but it's the best name I could come up with for what they are and
how they're used. This will probably go through some more evolution when
I rip out EJS and replace it with something much smaller.

--- a/src/routes/views/templates/author.html
+++ b/src/routes/views/templates/author.html
@@ -1,4 +1,4 @@
-<%- include('partials/header.html'); %>
+<%- include('layout/header.html'); %>
 
 <header class="profile">
   <img class="avatar" src="<%= avatarUrl %>">
@@ -14,4 +14,4 @@
 
 <%- include('feed.html', { msgs }); %>
 
-<%- include('partials/footer.html'); %>
+<%- include('layout/footer.html'); %>
