--- a/src/routes/views/templates/layout/header.html
+++ b/src/routes/views/templates/layout/header.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>&#x1F3DD;&#xFE0F; Oasis</title>
-    <link rel="stylesheet" href="/static/public/style.css">
+    <link rel="stylesheet" href="/static/assets/style.css">
     <link rel="stylesheet" href="/static/hljs/github.css">
   </head>
   <body>
