Add highlight for thread "target"
I don't think "target" is the right word to use, but when you click a
message and you're taken to the thread I think it's useful to actually
highlight which message you selected.

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -28,6 +28,11 @@ pre {
   overflow-x: auto;
 }
 
+.message.thread-target {
+  border-color: hsl(240, 66%, 75%);
+  box-shadow: 0 0 0 .17rem hsl(240, 66%, 92%);
+}
+
 .message img, .message video {
   max-width: 100%;
 }
