Change threads to remove reply margins

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -46,6 +46,11 @@ pre {
   background-color: var(--discreet);
 }
 
+.message.reply {
+  margin-top: 0;
+  margin-bottom: -1px;
+}
+
 .message.thread-target {
   box-shadow: 0 0 0 var(--medium-stroke) var(--highlight-shadow);
   border-color: var(--highlight);
