Change cursor when hovering over `<summary>`

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -234,7 +234,8 @@ textarea {
 
 /* content warning! */
 summary {
-    padding: 1rem 0.5rem;
-    background-color: hsl(30, 100%, 83%);
-    margin: 1rem 0;
+  padding: 1rem 0.5rem;
+  background-color: hsl(30, 100%, 83%);
+  margin: 1rem 0;
+  cursor: pointer;
 }
