Add auto-filled value for reply textarea

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -229,7 +229,9 @@ progress {
 textarea {
   display: block;
   width: 100%;
-  height: 8rem;
+  height: 16rem;
+  font-size: 1rem;
+  padding: 0.5rem;
 }
 
 /* content warning! */
