Add more details to content warning colors

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -238,9 +238,11 @@ textarea {
 /* content warning! */
 summary {
   padding: 1rem 0.5rem;
-  background-color: hsl(30, 100%, 83%);
+  background-color: hsl(45, 100%, 83%);
   margin: 1rem 0;
   cursor: pointer;
+  color: hsl(45, 100%, 20%);
+  border: var(--thin-stroke) solid hsl(45, 100%, 66%);
 }
 
 .md-mention {
