Add maximum image height for 4:3 ratio

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -58,7 +58,8 @@ pre {
 
 .message img, .message video {
   max-width: 100%;
-  border: var(--thin-stroke) dotted var(--off-white)
+  max-height: 30em;
+  border: var(--thin-stroke) dotted var(--off-white);
 }
 
 .message > :first-child {
