--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -247,6 +247,8 @@ textarea {
   padding: 1rem;
   resize: vertical;
   width: 100%;
+  height: 9rem;
+  margin: 1rem 0;
 }
 
 /* content warning! */
