--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -247,8 +247,11 @@ textarea {
   padding: 1rem;
   resize: vertical;
   width: 100%;
-  height: 9rem;
   margin: 1rem 0;
+}
+
+textarea:focus {
+  height: 9rem;
 }
 
 /* content warning! */
