--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -2,7 +2,21 @@
   --thin-stroke: 1px;
   --medium-stroke: 3px;
   --heavy-stroke: 6px;
-  --common-radius: 2px;
+  --common-radius: var(--thin-stroke);
+
+  /* solarized light
+  --blue: #268bd2;
+  --highlight: #6c71c4;
+  --highlight-shadow: rgba(108, 113, 196, 0.33);
+  --almost-white: #fdf6e3;
+  --off-white: #eee8d5;
+  --discreet: hsl(240, 12%, 96%);
+  --primary: #657b83;
+  --red: #dc322f;
+  --secondary: var(--primary);
+  --background: var(--almost-white);
+  --heavy: black;
+  */
 
   /* light mode */
   --blue: hsl(240, 75%, 50%);
