--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,51 +1,3 @@
-:root {
-  --thin-stroke: 1px;
-  --medium-stroke: 3px;
-  --heavy-stroke: 6px;
-  --common-radius: var(--thin-stroke);
-
-  /* solarized light
-  --blue: #268bd2;
-  --highlight: #6c71c4;
-  --highlight-shadow: rgba(108, 113, 196, 0.33);
-  --almost-white: #fdf6e3;
-  --off-white: #eee8d5;
-  --discreet: hsl(240, 12%, 96%);
-  --primary: #657b83;
-  --red: #dc322f;
-  --secondary: var(--primary);
-  --background: var(--almost-white);
-  --heavy: black;
-  */
-
-  /* light mode */
-  --blue: hsl(240, 75%, 50%);
-  --highlight-shadow: hsl(240, 66%, 92%);
-  --highlight: hsl(240, 88%, 88%);
-  --almost-white: hsl(240, 12.5%, 98.4%);
-  --off-white: hsl(240, 12%, 92%);
-  --discreet: hsl(240, 12%, 96%);
-  --primary: hsl(240, 17%, 17%);
-  --red: hsl(330, 75%, 50%);
-  --secondary: hsl(240, 8%, 38%);
-  --background: var(--almost-white);
-  --heavy: black;
-
-  /* dark mode
-  --blue: hsl(240, 50%, 50%);
-  --highlight-shadow: hsl(240, 66%, 25%);
-  --highlight: hsl(240, 88%, 33%);
-  --almost-white: hsl(240, 12.5%, 1.6%);
-  --off-white: hsl(240, 12%, 12.5%);
-  --discreet: hsl(240, 12%, 4%);
-  --primary: hsl(240, 8.3%, 66%);
-  --red: hsl(330, 75%, 50%);
-  --secondary: hsl(240, 8%, 62%);
-  --background: var(--almost-white);
-  --heavy: hsl(240, 12.5%, 75%);
-  */
-}
-
 html {
   display: flex;
   font-family:
@@ -303,6 +255,13 @@ nav > ul > li {
 progress {
   display: block;
   width: 100%;
+}
+
+progress::-moz-progress-bar,
+progress::-webkit-progress-value,
+progress {
+  background: var(--blue);
+  border-color: var(--blue);
 }
 
 textarea {
