--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -307,6 +307,7 @@ textarea {
   transition: 0.0625s all ease;
   border: var(--thin-stroke) solid var(--off-white);
   border-radius: var(--common-radius);
+  color: var(--primary);
 }
 
 /*
