--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -100,7 +100,7 @@ select {
   background: var(--bg);
   color: var(--fg-status);
   border: var(--thin-stroke) solid var(--bg-status);
-  padding: 0.5rem 1rem;
+  padding: 0.5rem;
   margin-right: 1rem;
   -moz-appearance: none;
   appearance: none;
