--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -63,12 +63,12 @@ html {
 }
 
 /* https://www.desmos.com/calculator/3elcf5cwhn */
-h1 { font-size: 150%; }
-h2 { font-size: 128%; }
-h3 { font-size: 120%; }
-h4 { font-size: 116%; }
-h5 { font-size: 113%; }
-h6 { font-size: 111%; }
+h1 { font-size: 133%; } /*     4 / 3 */
+h2 { font-size: 115%; } /*     8 / 7 */
+h3 { font-size: 105%; } /*   16 / 15 */
+h4 { font-size: 103%; } /*   32 / 31 */
+h5 { font-size: 101%; } /*   64 / 63 */
+h6 { font-size: 100%; } /* 128 / 127 */
 
 h1,
 h2,
@@ -76,7 +76,7 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 0.5em 0;
+  margin: 1rem 0;
 }
 
 ul,
