--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -122,6 +122,7 @@ pre {
 
 .message.private {
   background-color: var(--bg-status);
+  border-color: var(--bg);
 }
 
 .message.reply {
@@ -186,7 +187,7 @@ pre {
 
   body {
     width: 100%;
-    max-width: 42rem;
+    max-width: 40rem;
     margin: 1rem;
   }
 }
@@ -202,10 +203,9 @@ nav > ul > li > a.current {
 }
 
 .message {
-  padding: 1.5rem;
-  margin: 1rem 0;
+  padding: 1.5rem 1rem;
   border-radius: var(--common-radius);
-  border: var(--thin-stroke) solid var(--bg-status);
+  border-top: var(--medium-stroke) solid var(--bg-status);
   word-wrap: break-word;
 }
 
@@ -275,8 +275,13 @@ nav > ul > li > a.current {
   color: var(--red);
 }
 
+form {
+  padding: 1rem 0;
+}
+
 .message > footer > form {
   display: inline-block;
+  padding: 0;
 }
 
 .message > footer > form > button {
