Change to re-add box-shadow on thread target

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -127,6 +127,7 @@ pre {
 .message.thread-target {
   border-color: var(--blue);
   margin-bottom: var(--thin-stroke);
+  box-shadow: 0 0 var(--medium-stroke) var(--blue);
 }
 
 .message img,
