--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -133,7 +133,7 @@ pre {
 .message img,
 .message video {
   max-width: 100%;
-  max-height: 30em;
+  max-height: 66vh;
   border: var(--thin-stroke) dotted var(--bg-status);
 }
 
